// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`usage component rendering > renders 'This Week' tab with week totals 1`] = `
"Usage Statistics

 Today   [This Week]   All Time 

Provider / Model           Sessions     Msgs     Cost   Tokens     ↑In    ↓Out   Cache
──────────────────────────────────────────────────────────────────────────────────────
▸ Anthropic                       2       25    $0.12      60k     40k     20k       -
──────────────────────────────────────────────────────────────────────────────────────
Total                             5       30    $0.14      70k     45k     25k       -

[Tab/←→] period  [↑↓] select  [Enter] expand  [q] close"
`;

exports[`usage component rendering > renders empty usage when no providers 1`] = `
"Usage Statistics

[Today]   This Week    All Time 

Provider / Model           Sessions     Msgs     Cost   Tokens     ↑In    ↓Out   Cache
──────────────────────────────────────────────────────────────────────────────────────
  No usage data for this period
──────────────────────────────────────────────────────────────────────────────────────
Total                             -        -        -        -       -       -       -

[Tab/←→] period  [↑↓] select  [Enter] expand  [q] close"
`;

exports[`usage component rendering > renders usage dashboard with provider data and totals 1`] = `
"Usage Statistics

[Today]   This Week    All Time 

Provider / Model           Sessions     Msgs     Cost   Tokens     ↑In    ↓Out   Cache
──────────────────────────────────────────────────────────────────────────────────────
▸ Anthropic                       1        5    $0.03      12k    8.0k    4.0k       -
▸ OpenAI                          1        3    $0.01     5.0k    3.0k    2.0k       -
──────────────────────────────────────────────────────────────────────────────────────
Total                             2        8    $0.04      17k     11k    6.0k       -

[Tab/←→] period  [↑↓] select  [Enter] expand  [q] close"
`;
